# sms-client-rust

./: Cargo.toml  README.md  sample.env
src/: api.rs  error.rs  lib.rs  mobile_no.rs  types.rs
