[package]
name = "sms-client-rust"
version = "0.1.0-beta.1"
edition = "2018"


[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
async-trait = "0.1.51"
once_cell = "1.8.0"
serde_json = "1.0.72"
serde_path_to_error = "0.1.5"
regex = { version = "1.5.4" }
lazy_static = { version = "1.4.0" }

[dev-dependencies]
actix-rt = { version = "2.5.0" }
dotenv = "0.15.0"
tokio = { version = "1.12.0", features = ["rt", "macros"] }